src/test/ui/consts/const-eval/issue-65394.stderr
error[E0658]: mutable references are not allowed in constants
  --> $DIR/issue-65394.rs:8:13
   |
LL |     let r = &mut x;
   |             ^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0493]: destructor of `Vec<i32>` cannot be evaluated at compile-time
  --> $DIR/issue-65394.rs:7:9
   |
LL |     let mut x = Vec::<i32>::new();
   |         ^^^^^ the destructor for this type cannot be evaluated in constants
...
LL | };
   | - value is dropped here

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0493, E0658.
For more information about an error, try `rustc --explain E0493`.
